# docs/swagger.yaml
@@ -8,38 +8,75 @@ definitions:
     type: object
   users.CreateUserRequest:
     properties:
+      birth_date:
+        example: "1998-05-14T00:00:00Z"
+        type: string
       email:
         example: john@example.com
         type: string
+      first_name:
+        example: john
+        maxLength: 100
+        minLength: 3
+        type: string
+      last_name:
+        example: doe
+        maxLength: 100
+        minLength: 3
+        type: string
       username:
         example: john
+        maxLength: 100
+        minLength: 3
         type: string
+    required:
+    - email
+    - username
     type: object
   users.UserResponse:
     properties:
+      birth_date:
+        example: "1998-05-14T00:00:00Z"
+        type: string
       email:
         example: john@example.com
         type: string
-      id:
-        example: 1
-        type: integer
+      first_name:
+        example: john
+        type: string
+      last_name:
+        example: doe
+        type: string
       username:
         example: john
         type: string
+      xid:
+        example: 9m4e2mr0ui3e8a215n4g
+        type: string
     type: object
 info:
-  contact:
-    email: you@example.com
-    name: Your Name
-  description: A REST API for managing users.
-  license:
-    name: MIT
-  title: DB API
+  contact: {}
+  description: A production-ready Go API template.
+  title: Go API Template
   version: "1.0"
 paths:
-  /v1/users:
+  /admin/users:
     get:
       description: Get all users
+      parameters:
+      - default: 1
+        description: Page number
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - default: 20
+        description: Items per page
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
